# Project-kamayuc_worlds_sim

marsworld/: CMakeLists.txt  package.xml
marsworld/launch/: empty_world.launch  mars_world.launch
marsworld/models/curiosity_path/: model.config  model.sdf
marsworld/worlds/: empty.world  mars_curiosity.world
