<?xml version="1.0"?>
<package format="2">
  <name>marsworld</name>
  <version>0.0.0</version>
  <description>The marsworld package</description>

  <maintainer email="ycastroc@uni.pe">YoverCC</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>
